--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/styles/reset.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/styles/font.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/styles/style.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
